--- a/src/app/components/administrador/solicitud-rechazadas/solicitud-rechazadas.component.html
+++ b/src/app/components/administrador/solicitud-rechazadas/solicitud-rechazadas.component.html
@@ -15,7 +15,7 @@
         <th> <a class="nav-link" routerLink="/solicitud-rechazadas"><u>Rechazadas</u> </a></th>
                  
     </tr>
-    <input type="text" class="hola " placeholder="Buscar Solicitud por número de cédula" #textSearch (keyup)="onSearchSolicitud_Rechazadas(textSearch.value)"/>    
+    <input type="text" class="hola " placeholder="Buscar por número de cédula " #textSearch (keyup)="onSearchSolicitud_Rechazadas(textSearch.value)"/>    
 <table class="table table-hover ">
 
 
@@ -25,8 +25,8 @@
   
         <tr class="nombre_list">
             <th>N.-</th>
-            <th>Nombre Artistico</th>
-            <th>Numero de Cédula</th>   
+            <th>Nombre Artístico</th>
+            <th>Número de Cédula</th>   
              <th>Documento</th> 
              <th>Razón</th>            
         </tr>
@@ -34,7 +34,7 @@
     </thead>
     <tbody>
         <tr  *ngFor="let administrador of Administrador | filtroSolicitudRechazadas:page:search let i= index" >
-            <td>{{desde+i+1}}</td>
+            <td>{{page+i+1}}</td>
             <td>{{administrador.nombre_artistico}}</td>
             <td>{{administrador.nacionalidad}}</td>
             <td> <a [href]="administrador.document" target="_blank"  rel="noopener noreferrer" ><img src="https://www.science.co.il/internet/browsers/PDF-doc-256.png" style="height:50px" alt=""></a></td>
@@ -49,13 +49,26 @@
         </tr>
     </tbody>
 </table>
-<button class="btn btn-secondary" (click)=" atras_pagina_Solicitud_rechazas()" ><svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-arrow-left-circle-fill" viewBox="0 0 16 16">
-    <path d="M8 0a8 8 0 1 0 0 16A8 8 0 0 0 8 0zm3.5 7.5a.5.5 0 0 1 0 1H5.707l2.147 2.146a.5.5 0 0 1-.708.708l-3-3a.5.5 0 0 1 0-.708l3-3a.5.5 0 1 1 .708.708L5.707 7.5H11.5z"/>
-  </svg></button>
-<button class="btn btn-secondary" (click)="  siguiente_pagina_solicitud_rechazadas() " [disabled]="(Administrador | filtroSolicitudRechazadas:page:search).length<1"><svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-arrow-right-circle-fill" viewBox="0 0 16 16">
-    <path d="M8 0a8 8 0 1 1 0 16A8 8 0 0 1 8 0zM4.5 7.5a.5.5 0 0 0 0 1h5.793l-2.147 2.146a.5.5 0 0 0 .708.708l3-3a.5.5 0 0 0 0-.708l-3-3a.5.5 0 1 0-.708.708L10.293 7.5H4.5z"/>
-  </svg></button> 
-  <br>
+
+  <div class="container">
+    <div class="row">
+      <div class="col-3">
+       
+        <button class="btn btn-secondary" (click)="atras_pagina_Solicitud_rechazas()" > <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-arrow-left-circle-fill" viewBox="0 0 16 16">
+          <path d="M8 0a8 8 0 1 0 0 16A8 8 0 0 0 8 0zm3.5 7.5a.5.5 0 0 1 0 1H5.707l2.147 2.146a.5.5 0 0 1-.708.708l-3-3a.5.5 0 0 1 0-.708l3-3a.5.5 0 1 1 .708.708L5.707 7.5H11.5z"/>
+        </svg></button>
+      </div>
+      <div class="col-7">
+       
+      </div>
+      <div class="col-2">
+        <button class="btn btn-secondary" (click)="siguiente_pagina_solicitud_rechazadas() " [disabled]="(Administrador | filtroSolicitudAceptadas:page:search).length<1"><svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-arrow-right-circle-fill" viewBox="0 0 16 16">
+          <path d="M8 0a8 8 0 1 1 0 16A8 8 0 0 1 8 0zM4.5 7.5a.5.5 0 0 0 0 1h5.793l-2.147 2.146a.5.5 0 0 0 .708.708l3-3a.5.5 0 0 0 0-.708l-3-3a.5.5 0 1 0-.708.708L10.293 7.5H4.5z"/>
+        </svg></button> 
+  
+      </div>
+    </div>
+  </div>
 </div>
 </div>
 
