--- a/src/app/shared/header-admin/header-admin.component.html
+++ b/src/app/shared/header-admin/header-admin.component.html
@@ -7,8 +7,17 @@
      
        <!--  <li  class="nav-item" >
           <a class="nav-link" [routerLink]="['/administrador']">Inicio</a>
-        </li> -->
-      
+        </li> 
+        <li  class="nav-item" >
+          <a class="nav-link" [routerLink]="['/administrador']">Perfil</a>
+        </li> 
+        <li  class="nav-item" >
+          <a class="nav-link" [routerLink]="['/administrador']">Solicitud</a>
+        </li> 
+        <li  class="nav-item" >
+          <a class="nav-link" [routerLink]="['/administrador']">Salir</a>
+        </li>--> 
+       
         
       </ul>
     </a>
