--- a/src/app/auth/login/login.component.css
+++ b/src/app/auth/login/login.component.css
@@ -31,7 +31,7 @@
 .card_imagen{
     width: 50%;
     max-height: 3250px;
-    background-color: aqua;
+   
 
     background-position-x: center;
     background-image: url("https://images.pexels.com/photos/12311203/pexels-photo-12311203.jpeg?auto=compress&cs=tinysrgb&w=1260&h=750&dpr=1");
@@ -116,4 +116,9 @@ color: white;
 
 .nav-link{
       color: aliceblue;
+ }
+
+ .ver{
+    text-align: left;
+    margin-left: 10px;
  }
