--- a/src/app/components/administrador/administrador.component.html
+++ b/src/app/components/administrador/administrador.component.html
@@ -6,7 +6,7 @@
 <div class="Visualizacion_artistas_completa">
     <app-header-admin></app-header-admin>
 <div class="formulario_completo_artistas">
-    <h2>Gestionamiento de Solicitudes</h2>
+    <h2>Gestionar Solicitudes</h2>
     <p>Este módulo te permite visualizar todas las solicitudes de los artistas 
     </p>
     <hr>
@@ -16,7 +16,7 @@
         <th> <a class="nav-link" routerLink="/solicitud-rechazadas"><u>Rechazadas</u> </a></th>
        
     </tr>
-    <input type="text" class="hola" placeholder="Buscar por numero de cédula " #textSearch (keyup)="onSearchMensaje(textSearch.value)"/>  
+    <input type="text" class="hola" placeholder="Buscar por número de cédula " #textSearch (keyup)="onSearchMensaje(textSearch.value)"/>  
     <div class="table-responsive">
 <table class="table table-hover ">
    
@@ -26,8 +26,8 @@
    
         <tr class="nombre_list">
             <th>N.-</th>
-            <th>Nombre Artistico</th>
-            <th>Numero de Cédula</th>   
+            <th>Nombre Artístico</th>
+            <th>Número de Cédula</th>   
              <th>Documento</th>          
         </tr>
     </thead>
@@ -54,14 +54,27 @@
         </tr>
     </tbody>
 </table>
-<button class="btn btn-secondary" (click)="atras_pagina_Solicitud()" ><svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-arrow-left-circle-fill" viewBox="0 0 16 16">
-    <path d="M8 0a8 8 0 1 0 0 16A8 8 0 0 0 8 0zm3.5 7.5a.5.5 0 0 1 0 1H5.707l2.147 2.146a.5.5 0 0 1-.708.708l-3-3a.5.5 0 0 1 0-.708l3-3a.5.5 0 1 1 .708.708L5.707 7.5H11.5z"/>
-  </svg></button>
-<button class="btn btn-secondary" (click)="  siguiente_pagina_solicitud() " [disabled]="(Administrador | filtroSolicitudAceptadas:page:search).length<1"><svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-arrow-right-circle-fill" viewBox="0 0 16 16">
-    <path d="M8 0a8 8 0 1 1 0 16A8 8 0 0 1 8 0zM4.5 7.5a.5.5 0 0 0 0 1h5.793l-2.147 2.146a.5.5 0 0 0 .708.708l3-3a.5.5 0 0 0 0-.708l-3-3a.5.5 0 1 0-.708.708L10.293 7.5H4.5z"/>
-  </svg></button> 
-</div>
 
+</div>
+<div class="container">
+    <div class="row">
+      <div class="col-3">
+       
+        <button class="btn btn-secondary" (click)="atras_pagina_Solicitud()" > <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-arrow-left-circle-fill" viewBox="0 0 16 16">
+          <path d="M8 0a8 8 0 1 0 0 16A8 8 0 0 0 8 0zm3.5 7.5a.5.5 0 0 1 0 1H5.707l2.147 2.146a.5.5 0 0 1-.708.708l-3-3a.5.5 0 0 1 0-.708l3-3a.5.5 0 1 1 .708.708L5.707 7.5H11.5z"/>
+        </svg></button>
+      </div>
+      <div class="col-7">
+       
+      </div>
+      <div class="col-2">
+        <button class="btn btn-secondary" (click)="siguiente_pagina_solicitud() " [disabled]="(Administrador | filtroSolicitudAceptadas:page:search).length<1"><svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-arrow-right-circle-fill" viewBox="0 0 16 16">
+          <path d="M8 0a8 8 0 1 1 0 16A8 8 0 0 1 8 0zM4.5 7.5a.5.5 0 0 0 0 1h5.793l-2.147 2.146a.5.5 0 0 0 .708.708l3-3a.5.5 0 0 0 0-.708l-3-3a.5.5 0 1 0-.708.708L10.293 7.5H4.5z"/>
+        </svg></button> 
+  
+      </div>
+    </div>
+  </div>
 
 </div>
 </div>
