--- a/src/app/components/perfil/show/show.component.css
+++ b/src/app/components/perfil/show/show.component.css
@@ -1,7 +1,7 @@
 .perfil_completo{
     width: 100%;
 
-    height: 100vh;
+    height: 100%;
    
 }
 .mb-12{
@@ -55,7 +55,7 @@ height:
     border:5px solid #666;
 }
 .imagen_avatar h2{
-    margin-right: 80px;
+    margin-right: 195px;
 }
 .form-control{
     text-align: center;
@@ -66,6 +66,22 @@ height:
 }
 .Completo_perfil_administrador{
     display: flex;
+  
+    height: 100vh;
+}
+
+
+
+
+
+
+
+.icono{
+    background-color: white;
+    width:100%;
+    height: 2px;
+    margin: 5px 0;
+    color:white;
 }
 @media only screen and (max-width: 1200px) {
 
