--- a/src/app/components/usuarios/Albumes/show-albumes/show-albumes.component.css
+++ b/src/app/components/usuarios/Albumes/show-albumes/show-albumes.component.css
@@ -1,68 +1,43 @@
-.Contenedos_todos_los_albumes{
+.Contenedos_todos_los_generos{
 
     width: 100%;
-    height: auto;
-
-  
-}
-.Completo_show_albumes{
-    display: flex;
-   
-    width: 100%;
-}
-.gg{
-    font-size: 80% ;  
-    width: 98%;  
-}
-.imagenes_generos{
-    width: 220px;
-    height: 200px;
-    text-align: center;
-}
-.btn{
-    margin: 2px;
-    font-size: 80% ; 
-    margin-left: 5.9px;
-
-}
-.col-3{
-    padding-left: 4%;
-  }
-  .col-2{
-    padding-left: 6%;  
-}
-.container1{
- 
-    width:100%;
     height: 100%;
-   
-    padding-left: 5%;
-    padding-right: 5.9%;
+
 }
-
-
-
+html{
+    scroll-behavior: smooth;
+}
+.col1{
+    margin-left: 25%;
+ }
+.Completo_generos{
+    display: flex;
+    
+    width: 100%;
+}
 .container1 h2{
     text-align: center;
     font-size: 180% ;  
 }
-.btn{
-    margin-left: 2px;
-    font-size: 80% ; 
+.container1{
+    
+     width: 100%;
+    height: auto;
+   
+    padding-left: 7%;
+    padding-right: 5%;
+   
+  
+    
    
 }
-.hola{
-    width: 99%;
-    margin-left: 2.9%;
-    border-top-right-radius: 5px;
-    border-bottom-left-radius: 5px;
-    border-top-left-radius:5px ;
-    border-bottom-right-radius: 5px;
-    height: 35px;
-    margin-bottom: 2%;
 
+.col2{
+    margin-left: 45px;
 }
-.btn_regresar{
+
+.btn_generos{
+    
     border-top-right-radius: 5px;
     border-bottom-left-radius: 5px;
     border-top-left-radius:5px ;
@@ -71,11 +46,37 @@
     margin-left: 10px;
     margin-right: 30%;
     margin-bottom: 5%;
+  
+   
+}
+.hola{
+    width: 90.5%;
+    margin-left: 1.5%;
+    border-top-right-radius: 5px;
+    border-bottom-left-radius: 5px;
+    border-top-left-radius:5px ;
+    border-bottom-right-radius: 5px;
+    height: 35px;
+    margin-bottom: 2%;
+
+}
+.btn{
+    justify-content: end;
+    margin: 2.9px;
+    font-size: 80% ;     
+}
+
+.col-3{
+  padding-left: 3%;
+}
+.col-2{
+    padding-left: 5%;  
 }
 .imagenes_generos{
-    width: 220px;
+    width: 200px;
     height: 200px;
     text-align: center;
+    
 }
 .imagenes_generos h3{
     text-align: center;  
@@ -84,11 +85,30 @@
     display: flex ;
     margin-left: 3%;
     margin-bottom: 10px;
+    
 }
+.contenedor_total_albumes{
+    width: 100%;
+}
+.regesar{
+    width: 90.5%;
+    margin-left: 1.5%;
+    border-top-right-radius: 5px;
+    border-bottom-left-radius: 5px;
+    border-top-left-radius:5px ;
+    border-bottom-right-radius: 5px;
+    height: 35px;
+    margin-bottom: 2%;
 
-
+}
+.card_mio{
+    height: 100px;
+    margin-bottom: 120px;
+   
+   
+}
 @media only screen and (max-width: 1200px) {
-    .Contenedos_todos_los_albumes{
+    .Contenedos_todos_los_generos{
         
         width: 100%;
         height: auto;
