--- a/src/app/components/usuarios/Albumes/show-albumes/show-albumes.component.html
+++ b/src/app/components/usuarios/Albumes/show-albumes/show-albumes.component.html
@@ -1,55 +1,62 @@
 <!--  -->
-<div class="Completo_show_albumes">
+<div class="Completo_generos">
   <div class="menu">
     <app-sidenav-user></app-sidenav-user>
   </div>
-  <div class="Contenedos_todos_los_albumes">
-    <app-header-artist></app-header-artist>
-  <div class="container1">
-    
-    <h2>Todos tus Álbumes </h2>
-      <p>Este módulo te permite visualizar todos los  álbumes creados 
-    <hr>
-    <div class="container">
-      <div class="row">
-        <div class="col col-lg-4">
-         
-        </div>
-        <div class="col col-lg-5">
-          
-        </div>
-        <div class="col1 col-lg-3">
-          <button  routerLink="/generos" type="submit" class=" regesar btn_regresar btn-primary w-100">Regresar</button>
-        </div>
-      </div>
+  <div class="contenedor_total_albumes">
+    <div >
+      <app-header-artist></app-header-artist>
     </div>
-      <div class="container col-lg-12 col-sm-12 col-md-12">
+    <div class="container1 ">
+     
+  
+  
+  
+      <h2>Todos tus Álbumes  </h2>
+  
+      <p>
+        Este módulo te permite visualizar todos los  álbumes creados 
+   </p>
+   <hr>
+   <div class="container">
+    <div class="row">
+      <div class="col col-lg-8">
+       
+      </div>
+      <div class="col col-lg-3">
+        <button  routerLink="/generos" type="submit" class=" regesar btn_regresar btn-primary w-100">Regresar</button>
+      </div>
+     
+    </div>
+  </div>
+  
+  
+    
+      <div class="container col-lg-12 col-md-12 col-sm-12">
         <input type="text" class="hola" placeholder="Buscar por nombre de Álbumes " #textSearch (keyup)="onSearchMensaje(textSearch.value)"/>
-  
-  
-  
-   
-      <div class="container">
         <div class="row">
-      <div class="card col-lg-12 col-sm-8 col-md-12" style="width: 16.5rem;" *ngFor="let albumes of todoslosalbumes | filtrarAlbumes:page:search let i= index">
-        <div class="card-body col-lg-12 col-sm-12 col-md-12   ">
+          <div class="card col-lg-12 col-sm-8 col-md-12" style="width: 16.5rem;" *ngFor="let albumes of todoslosalbumes | filtrarAlbumes:page:search let i= index">
+        <div class="card-body col-lg-12 col-md-12 col-sm-12   ">
           <img class="imagenes_generos" [src]="albumes.imageURL" alt="">
-         
+                   
+
+
+         <div class="card_mio">
           <h2>{{albumes.name}}</h2><br>
           <label>Género:{{albumes.genre_name}}</label><br>
           <label>Nombre:{{albumes.name}}</label><br>
          
           <label >Autor:{{albumes.author}}</label><br>
           <label > Año:{{albumes.year}}</label><br>
+        </div>
           
-       
-          
-          <a routerLink="/crear-canciones/{{albumes.id}}" (click)="obtenerdatosAlbumes(albumes.name,albumes.genre_name,albumes.author,albumes.imageURL,albumes.genre_id)" class="btn btn-success w-98"> Crear Canción</a>
-          <a routerLink="/Canciones-Albumes/{{albumes.id}}" class="btn btn-secondary w-98"> Ver Canciones</a>
-          <!--<button routerLink="/edit-Albumes/{{albumes.id}}" class="gg btn btn-primary  " >Editar</button>
-          -->
-         <button type="button" class=" gg btn btn-danger"
+          <a routerLink="/crear-canciones/{{albumes.id}}" (click)="obtenerdatosAlbumes(albumes.name,albumes.genre_name,albumes.author,albumes.imageURL,albumes.genre_id)" class="btn btn-success w-99"> Crear Canción</a> <!--   <button routerLink="/edit-generos/{{generos.id}}"   class="btn btn-primary w-100" >Editar</button>
+          --> 
+          <a routerLink="/Canciones-Albumes/{{albumes.id}}" class="btn btn-secondary w-99"> Ver Canciones</a>
+          <button type="button" class=" gg btn btn-danger w-100"
           (click)="eliminar_genero(albumes)" (click)="obtenerCanciones(albumes.id)">Eliminar</button> 
+
+     
   
   
   
@@ -63,7 +70,6 @@
   
   
   </div>
-  </div>
   <div class="container">
     <div class="row">
       <div class="col-3">
@@ -76,18 +82,22 @@
        
       </div>
       <div class="col-2">
-        <button class="btn btn-secondary" (click)="siguiente_pagina_album() " [disabled]="( todoslosalbumes | filtrarAlbumes:page:search).length<=0"><svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-arrow-right-circle-fill" viewBox="0 0 16 16">
+        <button class="btn btn-secondary" (click)="siguiente_pagina_album() "  [disabled]="(todoslosalbumes | filtrarAlbumes:page:search).length<1"><svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-arrow-right-circle-fill" viewBox="0 0 16 16">
           <path d="M8 0a8 8 0 1 1 0 16A8 8 0 0 1 8 0zM4.5 7.5a.5.5 0 0 0 0 1h5.793l-2.147 2.146a.5.5 0 0 0 .708.708l3-3a.5.5 0 0 0 0-.708l-3-3a.5.5 0 1 0-.708.708L10.293 7.5H4.5z"/>
         </svg></button> 
   
       </div>
     </div>
   </div>
+  
+  
+   
   </div>
   
+  
   </div>
-</div>
 
+  </div>
 
 
 
