--- a/src/app/components/usuarios/solicitud/solicitud.component.css
+++ b/src/app/components/usuarios/solicitud/solicitud.component.css
@@ -1,6 +1,7 @@
 .formulario{
     width: 100%;
-    height: auto;
+    height: 100%;
+   background-color: white;
   
    
 }
@@ -11,6 +12,7 @@
     padding-right: 5%;
     width: 100%;
     height: 100%;
+   
     
    
 }
@@ -24,7 +26,7 @@
  
     margin-left: 10%;
    
-    margin-top: 7%;
+    margin-top: 3%;
  
 }
 .imagen_avatar{
@@ -75,9 +77,13 @@ width:100%;
     border-radius: 30px;
     padding: 5px;
 }
+.menu{
+    height: 100%;
+}
 
 .contenedor_mensaje_solicitud{
-    height: 325px;  
+    height: 350px;
+   
   
 }
 .form-control{
@@ -93,10 +99,11 @@ width:100%;
 
 .btn{   
   
-    display:inline-flex;
+  
     align-items: center;
     margin-bottom: 20px;
     margin-left: 0.3%; 
+    text-align: center;
 }
 .error{
     color: red;
@@ -126,9 +133,12 @@ width:100%;
 }
 .Completo_solicitud{
     display: flex;
- 
-    height: auto;
+   
 
+
+}
+.menu{
+    height: 100%;
 }
 
 @media only screen and (max-width: 1200px) {
