--- a/src/app/shared/welcome/welcome.component.html
+++ b/src/app/shared/welcome/welcome.component.html
@@ -1,6 +1,5 @@
 
-
-  <!-- Navigation-->
+<!-- Navigation-->
  
 <nav class="navbar navbar-light bg-dark">
     <div class="container-fluid">
@@ -46,7 +45,7 @@
           <!-- Masthead Avatar Image-->
           <img class="masthead-avatar mb-5" src="assets/imagenes/oficial_logo.png" alt="..." />
           <!-- Masthead Heading-->
-          <h1 class="masthead-heading text-uppercase mb-0">TAKI-TRI</h1>
+          <h1 class="masthead-heading text-uppercase mb-0">TAKITRI</h1>
           <!-- Icon Divider-->
           <div class="divider-custom divider-light">
               <div class="divider-custom-line"></div>
@@ -54,11 +53,15 @@
               <div class="divider-custom-line"></div>
           </div>
           <!-- Masthead Subheading-->
+          <br>
+          <br>
           <p class="masthead-subheading font-weight-light mb-0">Tu talento más cerca de tus fans</p>
       </div>
+      <br>
     </div>
   <!-- Portfolio Section-->
   <div class="page-section portfolio" id="portfolio">
+    <br>
       <div class="container">
           <!-- Portfolio Section Heading-->
           <h2 class="page-section-heading text-center text-uppercase text-secondary mb-0">CREA</h2>
@@ -107,6 +110,8 @@
     </div>
   <!-- About Section-->
   <div class="page-section1 bg-primary text-white mb-0" id="Acerca">
+    <br>
+
       <div class="container">
           <!-- About Section Heading-->
           <h2 class="page-section-heading text-center text-uppercase text-white">Acerca </h2>
@@ -118,22 +123,27 @@
           </div>
           <!-- About Section Content-->
           <div class="row">
-              <div class="col-lg-4 ms-auto"><p class="lead">De una forma gratuita los artistas, tienen la posibilidad de subir su álbumes, canciones y más en una plataforma hecha esclusivamnete para artistas ecuatorinos y asi destacar el talento del País</div>
-              <div class="col-lg-4 me-auto"><p class="lead">Mediante la parte administrativa, se da acceso a los artistas a todo el gestionamiento de álbumes, canciones , dandole realce a la autoria y control de la carrera musical de cada artista </p></div>
-          </div>
+            <div class="acerca col-md-12 col-lg-12 mb-5">
+              <div class="col-lg-12 "><p class="lead">De una forma gratuita los artistas, tienen la posibilidad de subir sus álbumes, canciones y más en una plataforma hecha exclusivamente para artistas ecuatorianos y así destacar el talento del País</div>
+              <div class="col-lg-12 "><p class="lead">Mediante la parte administrativa, se da acceso a los artistas a todo la gestión de álbumes, canciones, dándole realce a la autoría y control de la carrera musical de cada artista </p></div>
+            </div>
+            </div>
           <!-- About Section Button-->
           <div class="text-center mt-4">
               <a class="btn btn-xl btn-outline-light" href="#Programador">
-                  <i class="fas fa-download me-2"></i>
+                  <i class="fas fa-download "></i>
                   Programador
               </a>
+              
           </div>
       </div>
+      <br>
     </div>
   <!-- Contact Section-->
-  <section class="page-section portfolio" >
+  <section class="page-section2 portfolio" >
     <div class="container">
         <!-- Portfolio Section Heading-->
+        <br>
         <h2 class="page-section-heading text-center text-uppercase text-secondary mb-0">Programador</h2>
         <!-- Icon Divider-->
         <div class="divider-custom">
@@ -149,9 +159,10 @@
                     <div class="portfolio-item-caption d-flex align-items-center justify-content-center h-100 w-100">
                         <div class="portfolio-item-caption-content text-center text-white"><i class="fas fa-plus fa-3x"></i></div>
                     </div>
-                    <h3 class="titulo_h3">Denisse Cumbal </h3>
+         <br>
+         <br>
                     <img class="img-fluid" src="assets/imagenes/denisse_cumbal.JPG" alt="..." />
-               
+                    <h3 class="titulo_h3">Denisse Cumbal </h3>
                   </div>
             </div>
             <!-- Portfolio Item 2-->
@@ -167,9 +178,11 @@
 <!-- About Section-->
 <section class="page-section1  text-white mb-0" id="Programador">
     <div class="container">
+        <br>
         <!-- About Section Heading-->
-        <h2 class="page-section-heading text-center text-uppercase text-white">¿Quién es? </h2>
-        <!-- Icon Divider-->
+        <h2 class="page-section-heading text-center text-uppercase text-white">¿Quién es?</h2>
+       <!-- Icon Divider-->
+       <br>
         <div class="divider-custom divider-light">
             <div class="divider-custom-line"></div>
             <div class="divider-custom-icon"><i class="fas fa-star"></i></div>
@@ -177,17 +190,20 @@
         </div>
         <!-- About Section Content-->
         <div class="row">
-            <div class="col-lg-4 ms-auto"><p class="lead">Soy una persona que le gusta ponerse retos, poder ver la programacion como la forma de crear el futuro en cada módulo</p></div>
-            <div class="col-lg-4 me-auto"><p class="lead">Mediante la creacion de TAKI-TRI, se procura darle una oportunidad a los artista de subir sus canciones a la web de forma gratuita y asi darse a conocer a nivel nacional </p></div>
+            <div class="acerca col-md-12 col-lg-12 mb-5"> 
+            <div class="col-lg-12 ms-auto"><p class="lead">Soy una persona que le gusta ponerse retos, ver la programación como la forma de crear el futuro en cada módulo.</p></div>
+            <div class="col-lg-12 me-auto"><p class="lead">Mediante la creación de TakiTri, se procura darles una oportunidad a los artistas de subir sus canciones a la web de forma gratuita y así darse a conocer a nivel nacional </p></div>
+        </div>
         </div>
         <!-- About Section Button-->
         <div class="text-center mt-4">
             <a class="btn btn-xl btn-outline-light" href="#Mision y Vision">
-                <i class="fas fa-download me-2"></i>
+                <i class="fas fa-download "></i>
                 Misión y Visión!
             </a>
           
         </div>
+        <br>
     </div>
 </section>
   <!-- Footer-->
@@ -196,6 +212,7 @@
   <section class="page-section portfolio" >
     <div class="container">
         <!-- Portfolio Section Heading-->
+        <br>
         <h2 class="page-section-heading text-center text-uppercase text-secondary mb-0">Misión y Visión</h2>
         <!-- Icon Divider-->
         <div class="divider-custom">
@@ -225,6 +242,7 @@
 <section class="page-section1  text-white mb-0" id="Mision y Vision" >
     <div class="container">
         <!-- About Section Heading-->
+        <br>
         <h2 class="page-section-heading text-center text-uppercase text-white">Misión y Visión </h2>
         <!-- Icon Divider-->
         <div class="divider-custom divider-light">
@@ -233,26 +251,31 @@
             <div class="divider-custom-line"></div>
         </div>
         <!-- About Section Content-->
-        <div class="row">
+        <div class="row8">
+            <div class="acerca col-md-12 col-lg-12 mb-5">  
           <h3>Misión</h3>
-            <div class="col-lg-4 ms-auto"><p class="lead">            Brindar a los artistas la oportunidad de llegar a más personas mediante la  música , 
+            <div class="col-lg-12 ms-auto"><p class="lead"> Brindar a los artistas la oportunidad de llegar a más personas mediante la música, 
               construyendo una identidad musical en los niños, jóvenes y adultos ecuatorianos.  
+
   </p></div>
             <h3>Visión</h3> 
-            <div class="col-lg-4 me-auto"><p class="lead">Comunicar mediante la música,
-              donde el respeto en cada uno de los artistas se refleja en cada canción de Taki-tri,
+            <div class="col-lg-12 me-auto"><p class="lead">Comunicar mediante la música,
+              donde el respeto en cada uno de los artistas se refleja en cada canción en TakiTri,
               donde la humildad del ecuatoriano se escucha en los versos y la sinceridad en cada estrofa,
-              sin dejar a un lado la  honestidad en cada nota musical que  da vida y coraje al talento ecuatoriano.
+              sin dejar a un lado la honestidad en cada nota musical que da vida y coraje al talento ecuatoriano.
+
  </p></div>
+</div>
         </div>
         <!-- About Section Button-->
         <div class="text-center mt-4">
             <a class="btn btn-xl btn-outline-light" href="#Inicio">
-                <i class="fas fa-download me-2"></i>
+                <i class="fas fa-download "></i>
                 Inicio
             </a>
         </div>
     </div>
+    <br>
 </section>
 
 
@@ -272,4 +295,3 @@
   <!-- * * Activate your form at https://startbootstrap.com/solution/contact-forms * *-->
   <!-- * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * *-->
   <script src="https://cdn.startbootstrap.com/sb-forms-latest.js"></script>
-  
