--- a/src/app/sidenav/sidenav.component.css
+++ b/src/app/sidenav/sidenav.component.css
@@ -18,14 +18,18 @@
   
   }
   .avatar_perfil{
-    width:80px;
-    height:80px;
+    width:105px;
+    height:105px;
+   
+    text-align: center;
+    margin-left: 20px;
+   
     border-radius:150px;
     border:5px solid #666;
-    text-align: center;
-    margin-left: 40px;
+
  
   }
+  
   .home{
       text-decoration: none;
       color: aliceblue;
@@ -37,7 +41,64 @@
       margin-left: 50px;
     }
     .nombre{
+      color: white;
       padding: 2px;
-      margin-left: 57px; 
+      margin-left: 30px; 
+      display: inline;
     }
 
+.l-navbar{
+  width: 250px;
+ 
+}
+.todo{
+  width: 250px;
+  
+}
+.nav{
+  padding-top: 60px;
+padding-left: 20px;
+}
+.nombre {
+  text-align: center;
+  color: white;
+
+}
+
+.loader {
+  margin-left: 30px;
+  text-align: center;
+  align-items: center;
+ 
+   border: 10px solid #f3f3f3;
+   border-radius: 50%;
+   border-top: 10px solid #3498db;
+   width: 90px;
+   height: 90px;
+   -webkit-animation: spin 2s linear infinite; /* Safari */
+   animation: spin 2s linear infinite;
+ }
+ .h6{
+  color: white;
+  margin-left: 30px;
+ }
+ .foto_alteran{
+  margin-left: 40px;
+ }
+ .redonde{
+  height: 130px;
+ }
+ 
+ /* Safari */
+ @-webkit-keyframes spin {
+   0% { -webkit-transform: rotate(0deg); }
+   100% { -webkit-transform: rotate(360deg); }
+ }
+ 
+ @keyframes spin {
+   0% { transform: rotate(0deg); }
+   100% { transform: rotate(360deg); }
+ }
+
+
+    
