--- a/src/app/sidenav/sidenav.component.html
+++ b/src/app/sidenav/sidenav.component.html
@@ -1,52 +1,81 @@
+<body id="body-pd" class="todo bg-dark">
+  <div id="sidemenu" class="menu-collapsed">
+  <header class="header" id="header">
+      <div class="header_toggle"> <i class='bx bx-menu' id="header-toggle"></i> </div>
+    <svg class="bi me-2" width="16" height="16"></svg>
 
-<div class="d-flex flex-column flex-shrink-0 p-3 text-white bg-dark" >
-    <a href="#" class="nav-link text-white"  >
-        <svg class="bi me-2" width="16" height="16"><use xlink:href="#speedometer2"/></svg>
-        Administrador
-      </a>
-      <img [src]="this.imagen" class="avatar_perfil">
-      <h4 class="nombre">{{this.name}}</h4>
-      <hr>
+    <div class="icono" id="menu-btn">
+      <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-credit-card-2-back-fill" viewBox="0 0 16 16">
+        <path d="M0 4a2 2 0 0 1 2-2h12a2 2 0 0 1 2 2v5H0V4zm11.5 1a.5.5 0 0 0-.5.5v1a.5.5 0 0 0 .5.5h2a.5.5 0 0 0 .5-.5v-1a.5.5 0 0 0-.5-.5h-2zM0 11v1a2 2 0 0 0 2 2h12a2 2 0 0 0 2-2v-1H0z"/>
+      </svg>
 
-  <ul class="nav nav-pills flex-column mb-auto">
-    <li>
-        <a routerLink="/show/{{usuario}}" class="nav-link text-white">
+    </div>
+
+  </header>
+
+  <div class="l-navbar" id="profile">
+      <nav class="nav">
+        <a href="#" class="nav-link text-white" >  </a>
+               
+        <div  class="redonde "id=foto >
+        <img [src]="this.imagen_suplente" class="avatar_perfil" *ngIf="mostrar_admin==1 else mensaje" >
+        <ng-template #mensaje class="foto_alterna">
+          <h6 style="color: white; margin-left: 40px;">Cargando imagen... </h6>
+          <div class="loader">
+           
+          </div>
+      
+          </ng-template>
+      </div>
+     
+  
+       <h4 class="nombre" id="name">Administrador:{{this.name}}</h4>
+  
+    <ul class="nav nav-pills flex-column mb-auto" id="iconos">
+      <li>
+          <a routerLink="/show/{{usuario}}" class="nav-link text-white">
+            <svg class="bi me-2" width="16" height="60"></svg>
+            <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-person-fill" viewBox="0 0 16 16">
+              <path d="M3 14s-1 0-1-1 1-4 6-4 6 3 6 4-1 1-1 1H3zm5-6a3 3 0 1 0 0-6 3 3 0 0 0 0 6z"/>
+            </svg>
+  
+            
+   Perfil
+          </a>
+        </li>
+  
+     
+      
+      <li  >
+        <a routerLink="/administrador" class="nav-link text-white">
           <svg class="bi me-2" width="16" height="60"></svg>
-          <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-person-fill" viewBox="0 0 16 16">
-            <path d="M3 14s-1 0-1-1 1-4 6-4 6 3 6 4-1 1-1 1H3zm5-6a3 3 0 1 0 0-6 3 3 0 0 0 0 6z"/>
+          <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-file-earmark-text-fill" viewBox="0 0 16 16">
+            <path d="M9.293 0H4a2 2 0 0 0-2 2v12a2 2 0 0 0 2 2h8a2 2 0 0 0 2-2V4.707A1 1 0 0 0 13.707 4L10 .293A1 1 0 0 0 9.293 0zM9.5 3.5v-2l3 3h-2a1 1 0 0 1-1-1zM4.5 9a.5.5 0 0 1 0-1h7a.5.5 0 0 1 0 1h-7zM4 10.5a.5.5 0 0 1 .5-.5h7a.5.5 0 0 1 0 1h-7a.5.5 0 0 1-.5-.5zm.5 2.5a.5.5 0 0 1 0-1h4a.5.5 0 0 1 0 1h-4z"/>
           </svg>
-
-          
- Perfil
+          Solicitud 
         </a>
       </li>
-
+      <li  >
+        <a routerLink="/administrador" class="nav-link text-white" (click)="salir() " (click)="refresh()">
+          <svg class="bi me-2" width="16" height="60"></svg>
+          <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-box-arrow-right" viewBox="0 0 16 16">
+            <path fill-rule="evenodd" d="M10 12.5a.5.5 0 0 1-.5.5h-8a.5.5 0 0 1-.5-.5v-9a.5.5 0 0 1 .5-.5h8a.5.5 0 0 1 .5.5v2a.5.5 0 0 0 1 0v-2A1.5 1.5 0 0 0 9.5 2h-8A1.5 1.5 0 0 0 0 3.5v9A1.5 1.5 0 0 0 1.5 14h8a1.5 1.5 0 0 0 1.5-1.5v-2a.5.5 0 0 0-1 0v2z"/>
+            <path fill-rule="evenodd" d="M15.854 8.354a.5.5 0 0 0 0-.708l-3-3a.5.5 0 0 0-.708.708L14.293 7.5H5.5a.5.5 0 0 0 0 1h8.793l-2.147 2.146a.5.5 0 0 0 .708.708l3-3z"/>
+          </svg>
+        Salir
+        </a>
+      </li>
+    
    
     
-    <li  >
-      <a routerLink="/administrador" class="nav-link text-white">
-        <svg class="bi me-2" width="16" height="60"></svg>
-        <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-file-earmark-text-fill" viewBox="0 0 16 16">
-          <path d="M9.293 0H4a2 2 0 0 0-2 2v12a2 2 0 0 0 2 2h8a2 2 0 0 0 2-2V4.707A1 1 0 0 0 13.707 4L10 .293A1 1 0 0 0 9.293 0zM9.5 3.5v-2l3 3h-2a1 1 0 0 1-1-1zM4.5 9a.5.5 0 0 1 0-1h7a.5.5 0 0 1 0 1h-7zM4 10.5a.5.5 0 0 1 .5-.5h7a.5.5 0 0 1 0 1h-7a.5.5 0 0 1-.5-.5zm.5 2.5a.5.5 0 0 1 0-1h4a.5.5 0 0 1 0 1h-4z"/>
-        </svg>
-        Solicitud 
-      </a>
-    </li>
-    <li  >
-      <a routerLink="/administrador" class="nav-link text-white" (click)="salir() " (click)="refresh()">
-        <svg class="bi me-2" width="16" height="60"></svg>
-        <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-box-arrow-right" viewBox="0 0 16 16">
-          <path fill-rule="evenodd" d="M10 12.5a.5.5 0 0 1-.5.5h-8a.5.5 0 0 1-.5-.5v-9a.5.5 0 0 1 .5-.5h8a.5.5 0 0 1 .5.5v2a.5.5 0 0 0 1 0v-2A1.5 1.5 0 0 0 9.5 2h-8A1.5 1.5 0 0 0 0 3.5v9A1.5 1.5 0 0 0 1.5 14h8a1.5 1.5 0 0 0 1.5-1.5v-2a.5.5 0 0 0-1 0v2z"/>
-          <path fill-rule="evenodd" d="M15.854 8.354a.5.5 0 0 0 0-.708l-3-3a.5.5 0 0 0-.708.708L14.293 7.5H5.5a.5.5 0 0 0 0 1h8.793l-2.147 2.146a.5.5 0 0 0 .708.708l3-3z"/>
-        </svg>
-      Salir
-      </a>
-    </li>
+    <li>
+    </ul>
+    <br>
   
- 
-  
-  <li>
-  </ul>
-  <br>
-
+          
+      </nav>
+  </div>
 </div>
+</body>
+  <!--Container Main start-->
+  
